--- a/index.html
+++ b/index.html
@@ -884,10 +884,10 @@
                         <a href="#contact" class="btn btn-outline">Contact Me</a>
                     </div>
                     <div class="social-links">
-                        <a href="https://www.linkedin.com/in/vineet-shukla" target="_blank" aria-label="LinkedIn">
+                        <a href="https://www.linkedin.com/in/vineet-shukla-0b1b67313" target="_blank" aria-label="LinkedIn">
                             <i class="fab fa-linkedin-in"></i>
                         </a>
-                        <a href="https://github.com/vineet-shukla" target="_blank" aria-label="GitHub">
+                        <a href="https://github.com/vineet-shukl" target="_blank" aria-label="GitHub">
                             <i class="fab fa-github"></i>
                         </a>
                         <a href="mailto:vineetshukla.work@gmail.com" aria-label="Email">
